--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<!--<script charset="utf-8" type="text/javascript"  src="main/services/SrvSearch.js"></script>-->
 	<!--<script charset="utf-8" type="text/javascript"  src="main/services/SrvTimeKeeper.js"></script>-->
 	<!--<script charset="utf-8" type="text/javascript"  src="main/services/SrvUtils.js"></script>-->
+	<script charset="utf-8" type="text/javascript"  src="js/directives/DirValidation.js"></script>
 	<script charset="utf-8" type="text/javascript"  src="js/directives/DirTree.js"></script>
 	<!--<script charset="utf-8" type="text/javascript"  src="main/directives/AlertWindow.js"></script>-->
 	<!--<script charset="utf-8" type="text/javascript"  src="main/directives/NgDirectives.js"></script>-->
